<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iron_swords_background"
    tools:context=".GameOverActivity">

    <LinearLayout
        android:id="@+id/game_over_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textColor="#F6FDFD"
            android:textSize="70sp"
            android:textStyle="italic|bold"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_over_screen"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/your_score"
            android:textColor="#F6FDFD"
            android:textSize="50sp"
            android:textStyle="italic|bold"/>

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreLabel"
            android:layout_centerInParent="true"
            android:text="@string/value"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="italic|bold"
            android:background="#99EFCEB1"
            android:gravity="center"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/instruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/Instructions1"
        android:textColor="#F6FDFD"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/instruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction1"
        android:layout_centerHorizontal="true"
        android:text="@string/Instructions2"
        android:textColor="#F6FDFD"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction2"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F6FDFD"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#65EFCEB1"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menuButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#65EFCEB1"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic"/>

    </LinearLayout>
</RelativeLayout>